Stylesheet/emote/tag updates 2016-01-26

--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -172,9 +172,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Ploungers"}
+div.titlebox .subscribers span.number:after {content:" Numpties"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Forgetting about their new years resolutions" }
+div.titlebox p.users-online span.number:after { content: " Being silly" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
@@ -226,12 +226,12 @@ submitted
 /*Footer code*/
 .footer-parent
 {
- padding-bottom: 200px;
+ padding-bottom: 220px;
  clear:both;
  text-align:center;
- height:800px;
+ height:500px;
  width:100%;
- background-image:url(%%footxmas%%);
+ background-image:url(%%sbfooter%%);
  background-repeat:no-repeat;
  margin-bottom:-25px;
  background-position: center bottom;
@@ -1351,7 +1351,7 @@ z-index:9000}
 .thing[data-fullname$="3"] > .midcol > .upmod:focus::after { content: "Huh? Did you just call me... "Mom"?"; }
 .thing[data-fullname$="4"] > .midcol > .upmod:focus::after { content: "maybe looking at this nice lamp will help you."; }
 .thing[data-fullname$="5"] > .midcol > .upmod:focus::after { content: "WOWIE!! YOU DID IT!!! YOU DIDN'T DO A VIOLENCE!!!"; }
-.thing[data-fullname$="6"] > .midcol > .upmod:focus::after { content: "You're filled with Determination."; }
+.thing[data-fullname$="6"] > .midcol > .upmod:focus::after { content: "The Konami Code fills you with Determination."; }
 .thing[data-fullname$="7"] > .midcol > .upmod:focus::after { content: "You felt your sins crawling on your back."; }
 .thing[data-fullname$="8"] > .midcol > .upmod:focus::after { content: "Despite everything, it's still you."; }
 .thing[data-fullname$="9"] > .midcol > .upmod:focus::after { content: "What happens when something without a soul gains the will to live?"; }
