--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -43,7 +43,7 @@ a { cursor: url(%%CursorHover%%), pointer; }
 /* Changes background  */
 
  body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%toriel%%) fixed no-repeat 66% 100% !important;
+    background:  url(%%hoi%%) fixed no-repeat 66% 100% !important;
 }go
 
 
