--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -464,7 +464,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -476,7 +476,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"], a[href|="/sugarcoat"], a[href|="/daringlaugh"], a[href|="/daringpoker"], a[href|="/ajneckless"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"], a[href|="/sugarcoat"], a[href|="/daringlaugh"], a[href|="/daringpoker"], a[href|="/ajneckless"], a[href|="/sbwhy"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -496,7 +496,7 @@ a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly
 {background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150e 'motes */
-a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/necklestia"], a[href|="/macship"], a[href|="/bloomening"], a[href|="/clearlestia"], a[href|="/nerddaring"], a[href|="/daringjoy"], a[href|="/kittenbloom"], a[href|="/mint"], a[href|="/crazyrainbowicorn"], a[href|="/communerd"]
+a[href|="/boopening"], a[href|="/agentt"], a[href|="/hoodiedash"], a[href|="/shyhoodie"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/necklestia"], a[href|="/macship"], a[href|="/bloomening"], a[href|="/clearlestia"], a[href|="/nerddaring"], a[href|="/daringjoy"], a[href|="/kittenbloom"], a[href|="/mint"], a[href|="/crazyrainbowicorn"], a[href|="/communerd"], a[href="/starlightnerd"], a[href|="/sillybeecuddle"]
 {background-image:url(%%150x150e%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
@@ -565,7 +565,7 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 {background-image:url(%%misfitsl%%);display:block;float:left;}
 
 /* Misfits m */
-a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"], a[href|="/badgerscratch"], a[href|="/rddoubletake"], a[href|="/dashcookiejar"], a[href|="/insaneshy"], a[href|="/heybaby"], a[href|="/humbug"], a[href|="/spikesquee"], a[href|="/maudvonbismarck"], a[href|="/maudk"], a[href|="/wardash"], a[href|="/rubypancakehug"], a[href|="/silverquill"]
+a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"], a[href|="/badgerscratch"], a[href|="/rddoubletake"], a[href|="/dashcookiejar"], a[href|="/insaneshy"], a[href|="/heybaby"], a[href|="/humbug"], a[href|="/spikesquee"], a[href|="/maudvonbismarck"], a[href|="/maudk"], a[href|="/wardash"], a[href|="/rubypancakehug"], a[href|="/silverquill"], a[href|="/scootawan"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /*
@@ -581,7 +581,7 @@ a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/a
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"], a[href|="/hoodiedash"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"], a[href|="/sursilly"], a[href|="/cadsoawesome"], a[href|="/wheredidthemuffingo"], a[href|="/hoodiedash"], a[href|="/marblescared"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
@@ -633,11 +633,11 @@ a[href|="/rarityspy"], a[href|="/discoin"], a[href|="/ajduckface"], a[href|="/ne
 {background-position: -200% -400%;}
 
 /* Grid pos 0,5 'motes */
-a[href|="/twilightyay"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"], a[href|="/incognitotwi"], a[href|="/changelingshrug"], a[href|="/ididntlisten"]
+a[href|="/twilightyay"], a[href|="/nerdtrixie"], a[href|="/rarapossessed"], a[href|="/rdscreaminginternally"], a[href|="/twilikethis"], a[href|="/incognitotwi"], a[href|="/changelingshrug"], a[href|="/ididntlisten"], a[href="/starlightnerd"]
 {background-position: 0 -500%;}
 
 /* Grid pos 1,5 'motes */
-a[href|="/tiadisapproval"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"], a[href|="/sovietsparkle"], a[href|="/sunbreadshimmer"], a[href|="/daringlicious"]
+a[href|="/tiadisapproval"], a[href|="/nerdpie"], a[href|="/maudsmile"], a[href|="/twijoy"], a[href|="/celcrazy"], a[href|="/sovietsparkle"], a[href|="/sunbreadshimmer"], a[href|="/daringlicious"], a[href|="/sillybeecuddle"]
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
@@ -709,7 +709,7 @@ a[href|="/rarishibe"], a[href|="/discentiahurry"], a[href|="/ddsad"], a[href|="/
 {background-position: -0% -1100%;}
 
 /* Grid pos 1,11 'motes */
-a[href|="/karmacute"], a[href|="/goodyear"], a[href|="/ppaside"]
+a[href|="/karmacute"], a[href|="/goodyear"], a[href|="/ppaside"], a[href|="/sbwhy"]
 {background-position: -100% -1100%;}
 
 /* Grid pos 2,11 'motes */
@@ -1300,3 +1300,4 @@ a[href|="/maudk"] {width:150px;height:100px;background-position: -413px -450px;}
 a[href|="/wardash"] {width:150px;height:135px;background-position: -544px -545px;}
 a[href|="/rubypancakehug"] {width:150px;height:83px;background-position: -394px -550px;}
 a[href|="/silverquill"] {width:123px;height:150px;background-position: -271px -483px;}
+a[href|="/scootawan"] {width:150px;height:99px;background-position: -394px -633px;}
