--- a/addon/extracss-pure.css
+++ b/addon/extracss-pure.css
@@ -356,16 +356,16 @@
 @keyframes slide{0%{left:0%;transform:scaleX(1)}46%{left:60%;transform:scaleX(1)}50%{left:60%;transform:scaleX(-1)}96%{left:0%;transform:scaleX(-1)}100%{left:0%;transform:scaleX(1)}}
 @keyframes slide-r{0%{left:0%;transform:scaleX(-1)}46%{left:60%;transform:scaleX(-1)}50%{left:60%;transform:scaleX(1)}96%{left:0%;transform:scaleX(1)}100%{left:0%;transform:scaleX(-1)}}
 .bpflag-slide {position:relative;animation:slide 8s infinite ease}
-.bpflag-r.bpflag-slide {position:relative;animation:slide-r 8s infinite ease}
+.bpflag-r.bpflag-slide {position:relative;animation-name:slide-r}
 .bpflag-shift {position:relative;animation:slide 8s infinite linear}
-.bpflag-r.bpflag-shift {position:relative;animation:slide-r 8s infinite linear}
+.bpflag-r.bpflag-shift {position:relative;animation-name:slide-r}
 
 /*== -!shift/-!slide ==*/
 @keyframes _excl_slide{0%{left:60%;transform:scaleX(-1)}46%{left:0%;transform:scaleX(-1)}50%{left:0%;transform:scaleX(1)}96%{left:60%;transform:scaleX(1)}100%{left:60%;transform:scaleX(-1)}}
 @keyframes _excl_slide-r{0%{left:60%;transform:scaleX(1)}46%{left:0%;transform:scaleX(1)}50%{left:0%;transform:scaleX(-1)}96%{left:60%;transform:scaleX(-1)}100%{left:60%;transform:scaleX(1)}}
-.bpflag-_excl_slide {position:relative;animation:_excl_slide 8s infinite ease}
+.bpflag-_excl_slide {position:relative;animation-name:_excl_slide}
 .bpflag-r.bpflag-_excl_slide {position:relative;animation:_excl_slide-r 8s infinite ease}
-.bpflag-_excl_shift {position:relative;animation:_excl_slide 8s infinite linear}
+.bpflag-_excl_shift {position:relative;animation-name:_excl_slide}
 .bpflag-r.bpflag-_excl_shift {position:relative;animation:_excl_slide-r 8s infinite linear}
 
 /*== speed ==*/
