--- a/source-css/flashsentry.css
+++ b/source-css/flashsentry.css
@@ -323,7 +323,7 @@ a[href|="/lunateehee"],a[href|="/rlunateehee"],a[href|="/fluttersrs"],a[href|="/
   background-position:0 -200%;
 }
 
-a[href|="/ajhappy"],a[href|="/happlejack"],a[href|="/rajhappy"],a[href|="/rhapplejack"],a[href|="/ppshrug"],a[href|="/rppshrug"],a[href|="/flutterblush"],a[href|="/rflutterblush"],a[href|="/wahaha"],a[href|="/rwahaha"],a[href|="/sbshocked"],a[href|="/rsbshocked"],.flair-lyra,.side .md table tr:nth-of-type(7) td:nth-of-type(1):after {
+a[href|="/ajhappy"],a[href|="/happlejack"],a[href|="/ppshrug"],a[href|="/flutterblush"],a[href|="/wahaha"],a[href|="/sbshocked"],a[href|="/suspiciousflash"],a[href|="/suspiciousfs"],.flair-lyra,.side .md table tr:nth-of-type(7) td:nth-of-type(1):after {
   background-position:0 -300%;
 }
 
@@ -780,7 +780,7 @@ END-PONYSCRIPT-IGNORE {color: red}
   text-align:center;
 }
 
-a[href|="/uncertainflash"],a[href|="/uncertainfs"],a[href|="/embarrassedflash"],a[href|="/embarrassedfs"],a[href|="/noproblem"],a[href|="/fsnoproblem"],a[href|="/fsdetermination"],a[href|="/waifustealer"],a[href|="/flashapproves"],a[href|="/fsapproves"],a[href|="/flashonduty"],a[href|="/flatteredflash"],a[href|="/flatteredfs"],a[href|="/proudflash"],a[href|="/proudfs"],a[href|="/cuteflash"],a[href|="/cutefs"],a[href|="/confusedflash"],a[href|="/confusedfs"],a[href|="/puzzledflash"],a[href|="/seriously"],a[href|="/flashseriously"],a[href|="/fsseriously"],a[href|="/squintyflash"],a[href|="/squintyfs"],a[href|="/zombieflash"],a[href|="/zombiefs"] {
+a[href|="/uncertainflash"],a[href|="/uncertainfs"],a[href|="/embarrassedflash"],a[href|="/embarrassedfs"],a[href|="/noproblem"],a[href|="/fsnoproblem"],a[href|="/fsdetermination"],a[href|="/waifustealer"],a[href|="/flashapproves"],a[href|="/fsapproves"],a[href|="/flashonduty"],a[href|="/flatteredflash"],a[href|="/flatteredfs"],a[href|="/proudflash"],a[href|="/proudfs"],a[href|="/cuteflash"],a[href|="/cutefs"],a[href|="/confusedflash"],a[href|="/confusedfs"],a[href|="/puzzledflash"],a[href|="/seriously"],a[href|="/flashseriously"],a[href|="/fsseriously"],a[href|="/squintyflash"],a[href|="/squintyfs"],a[href|="/zombieflash"],a[href|="/zombiefs"],a[href|="/suspiciousflash"],a[href|="/suspiciousfs"] {
   display:block;
   clear:none;
   float:left;
