--- a/source-css/ponymotesextra2.css
+++ b/source-css/ponymotesextra2.css
@@ -60,3 +60,4 @@ a[href|="/bigmaceatsbigmac"] {background:url(%%bigmaceatsbigmac%%) no-repeat;wid
 a[href|="/fluffleshuffle"] {background:url(%%fluffleshuffle%%) no-repeat;width:125px;height:81px;display:block;float:left;}
 a[href|="/implightsparkle"], a[href|="/implylightsparkle"] {background:url(%%implightsparkle%%) no-repeat;width:92px;height:100px;display:block;float:left;}
 a[href|="/bownom"] {background:url(%%bownom%%) no-repeat;width:100px;height:90px;display:block;float:left;}
+a[href|="/sillywater"] {background:url(%%sillywater%%) no-repeat;width:150px;height:86px;display:block;float:left;}
