Stylesheet/emote/tag updates 2016-02-25

--- a/source-css/beautybrass.css
+++ b/source-css/beautybrass.css
@@ -208,6 +208,7 @@ a[href="/s"]:hover::after {
 
 .md { overflow: auto }
 .usertext-edit .md { overflow: inherit }
+.linkflairlabel { max-width: none }
 
 .flair {
   padding:0;
