--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -103,6 +103,7 @@ a[href^="/"][href*="-in-"], a[href^="/"][href$="-in"], a[href^="/"][href*="-inp-
 
 .md { overflow: auto }
 .usertext-edit .md { overflow: inherit }
+.linkflairlabel { max-width: none }
 
 .flair {
   padding:0;
