--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -172,9 +172,9 @@ background: url(%%horsewife%%) center center no-repeat transparent;
 /*Subscriber Name Replace*/
 div.titlebox span.word {display:none}
 
-div.titlebox .subscribers span.number:after {content:" Numpties"}
+div.titlebox .subscribers span.number:after {content:" Pony Deprived Ploungers"}
 div.titlebox .subscribers span.number:after {font-size:12px!important; }
-div.titlebox p.users-online span.number:after { content: " Being silly" }
+div.titlebox p.users-online span.number:after { content: " Stalking the new queue for their fix" }
 div.titlebox p.users-online span.word { display: none }
 
 /*Flair modifications*/
