--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -178,7 +178,7 @@ a[href="/sbsquint"]{
     Float: left;
     Width: 70px;
     Height: 70px;
-    background-image: url(%%sbsquint%%) !important
+    background-image: url(%%sbsquint2%%) !important
 }
 
 a[href="/hornymare"],a[href="/hornytwi"]{
@@ -236,6 +236,16 @@ a[href="/sbisonfire"], a[href="/roastedmarshmallow"], a[href="/grenlitbobonfirea
     Width: 168px;
     Height: 200px;
     background-image: url(%%roastedmarshmallow%%) !important
+}
+
+a[href="/rdgrunkle"] {
+    background-position: 0px 0px;
+    Display: block;
+    Clear: none;
+    Float: left;
+    Width: 70px;
+    Height: 70px;
+    background-image: url(%%rdgrunkle%%) !important
 }
 
 /*Making the tabs' corners more rounded (stolen from r/mylittlepony)*/
