--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -464,7 +464,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -476,7 +476,7 @@ a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/flutterfreaked"], a[
 {background-image:url(%%100x100b%%);width:100px;height:100px;display:block;float:left;}
 
 /* 100x100c 'motes */
-a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"], a[href|="/sugarcoat"], a[href|="/daringlaugh"], a[href|="/daringpoker"], a[href|="/ajneckless"], a[href|="/sbwhy"], a[href|="/sillyblep"]
+a[href|="/sadbot"], a[href|="/trixiecrazy"], a[href|="/wheredidthemuffingo"], a[href|="/dashthefuck"], a[href|="/cadsad"], a[href|="/sassybloom"], a[href|="/rdhello"], a[href|="/deeplyintriguedcadance"], a[href|="/vinylderp"], a[href|="/angryaj"], a[href|="/pearsteve"], a[href|="/riptreebrary"], a[href|="/ripgoldenoaks"], a[href|="/trixieawkward"], a[href|="/tgaptsundere"], a[href|="/princesslenny"], a[href|="/applebat2"], a[href|="/ididntlisten"], a[href|="/daringlicious"], a[href|="/daringcheeky"], a[href|="/discordmad"], a[href|="/g4smooze"], a[href|="/sadicecreamtwilight"], a[href|="/abswear"], a[href|="/tavilewd"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/justdoit"], a[href|="/vinyllook"], a[href|="/horsewife"], a[href|="/browniebun"], a[href|="/sneakyhorsewife"], a[href|="/sneakybrownie"], a[href|="/echtron"], a[href|="/fonso"], a[href|="/sugarcoat"], a[href|="/daringlaugh"], a[href|="/daringpoker"], a[href|="/ajneckless"], a[href|="/sbwhy"], a[href|="/sillyblep"], a[href|="/twipancake"], a[href|="/traumashy"], a[href|="/youtoldmethiswasagratedmovie"]
 {background-image:url(%%100x100c%%);width:100px;height:100px;display:block;float:left;}
 
 /* 150x150a 'motes. */
@@ -568,6 +568,10 @@ a[href|="/eqggaladash"], a[href|="/shininglick"], a[href|="/sblick"], a[href|="/
 a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fswhatthehellisthat"], a[href|="/spikesawit"], a[href|="/cmcscream"], a[href|="/karmascrunch"], a[href|="/daringcute"], a[href|="/floofdash"], a[href|="/notenoughbloom"], a[href|="/treehugger"], a[href|="/seriousapathia"], a[href|="/scrunchgate"], a[href|="/rubyjuice"], a[href|="/pinkiecannon"], a[href|="/daringconcerned"], a[href|="/germandash"], a[href|="/rainbowdeutsch"], a[href|="/cocoglee"], a[href|="/badgerscratch"], a[href|="/rddoubletake"], a[href|="/dashcookiejar"], a[href|="/insaneshy"], a[href|="/heybaby"], a[href|="/humbug"], a[href|="/spikesquee"], a[href|="/maudvonbismarck"], a[href|="/maudk"], a[href|="/wardash"], a[href|="/rubypancakehug"], a[href|="/silverquill"], a[href|="/scootawan"], a[href|="/sunburst"]
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
+/* Misfits n */
+a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"]
+{background-image:url(%%misfitsn%%);display:block;float:left;}
+
 /*
   ------
  */
@@ -585,19 +589,19 @@ a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebein
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
-a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/pinkiefly"], a[href|="/ghastly"], a[href|="/fluttersnake"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/dashthefuck"], a[href|="/shyhoodie"]
+a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/pinkiefly"], a[href|="/ghastly"], a[href|="/fluttersnake"], a[href|="/cadancehey"], a[href|="/cadencehey"], a[href|="/dashthefuck"], a[href|="/shyhoodie"], a[href|="/apathiawhat"]
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"], a[href|="/discordnorespect"], a[href|="/toughcrowd"]
+a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"], a[href|="/zecoracarry"], a[href|="/twifascinating"], a[href|="/cadsad"], a[href|="/discordnorespect"], a[href|="/toughcrowd"], a[href|="/changelingsad"]
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"], a[href|="/necklestia"], a[href|="/sunsetmaid"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"], a[href|="/sunsetjoy"], a[href|="/sassybloom"], a[href|="/necklestia"], a[href|="/sunsetmaid"], a[href|="/sadtwilight"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
-a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"]
+a[href|="/frittergasp"], a[href|="/ohyeah"], a[href|="/lunahmm"], a[href|="/pinkpyro"], a[href|="/fshide"], a[href|="/ajrescue"], a[href|="/scaryaj"], a[href|="/cybermedic"], a[href|="/sweetiebloom"], a[href|="/karmahappy2"], a[href|="/rdhello"], a[href|="/macship"], a[href|="/sadtwilight2"]
 {background-position: 0 -200%;}
 
 /* Grid pos 1,2 'motes */
@@ -717,11 +721,11 @@ a[href|="/discentiashock"], a[href|="/mlady"], a[href|="/ajstinkeye"], a[href|="
 {background-position: -200% -1100%;}
 
 /* Grid pos 0,12 'motes */
-a[href|="/apathiashock"], a[href|="/blushingluna"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"]
+a[href|="/apathiashock"], a[href|="/blushingluna"], a[href|="/berrypinchwhat"], a[href|="/rubywhat"], a[href|="/twipancake"]
 {background-position: 0 -1200%;}
 
 /* Grid pos 1,12 'motes */
-a[href|="/karmahappy"], a[href|="/scootles"], a[href|="/octaviamanic"]
+a[href|="/karmahappy"], a[href|="/scootles"], a[href|="/octaviamanic"], a[href|="/traumashy"], a[href|="/youtoldmethiswasagratedmovie"]
 {background-position: -100% -1200%;}
 
 /* Grid pos 2,12 'motes */
@@ -1302,3 +1306,5 @@ a[href|="/rubypancakehug"] {width:150px;height:83px;background-position: -394px 
 a[href|="/silverquill"] {width:123px;height:150px;background-position: -271px -483px;}
 a[href|="/scootawan"] {width:150px;height:99px;background-position: -394px -633px;}
 a[href|="/sunburst"] {width:100px;height:150px;background-position: -166px -483px;}
+a[href|="/apathiawhatareyoudoing"] {width:95px;height:200px;}
+a[href|="/doubletrix"] {width:126px;height:150px;background-position: -95px 0;}
