--- a/source-css/cheesesandwichmlp.css
+++ b/source-css/cheesesandwichmlp.css
@@ -89,6 +89,8 @@ body { background: url(%%colt%%) no-repeat fixed center center }
 .sidecontentbox .helplink + .title h1:before { font-size: 10pt !important; content: "MODERATORS" }
 .sidecontentbox .helplink+.title+.content li:nth-of-type(4n) { display: none }
 
+.linkflairlabel { max-width: none }
+
 /*** Style Buttons ***/
 
 .titlebox .fancy-toggle-button a, span.RESshortcutside,
