--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -380,7 +380,7 @@ font-weight: 700;
 }
 .flair:after
 {
-background-image: url(%%flairsheetf%%);
+background-image: url(%%flairsheetg%%);
 background-position: 0px 0px;
 content: "";
 display: inline-block;
@@ -627,6 +627,7 @@ background-repeat: no-repeat;
 .flair-llamma:after { background-position: 0px -7080px }
 .flair-FrancisVace:after { background-position: 0px -7110px }
 .flair-Memekip:after { background-position: 0px -7140px }
+.flair-throwawayaccount997:after { background-position: 0px -7170px }
 
 /* Nightmode fix for flair */
 body.res-nightmode:first-of-type .flair { background-color: #222!important; }
@@ -653,7 +654,7 @@ a[href|='/bigmad'] {width:120px; height:152px; background-position: -0px -0px}
     color: black;
     border: 0;
     border-radius: 0;
-    background-image: url(%%flairsheetf%%);
+    background-image: url(%%flairsheetg%%);
     background-repeat: no-repeat;
     display: inline-block;
     width: 30px;
@@ -793,7 +794,8 @@ a.author[href$=Doktor_Elcaro],
 a.author[href$=The_Assistant],
 a.author[href$=topkekbestkek],
 a.author[href$=DoomKey],
-a.author[href$=thisisgenny]
+a.author[href$=thisisgenny],
+a.author[href$=throwawayaccount997]
 
 { 
 font-size:0!important; 
@@ -927,8 +929,8 @@ a.author[href$=The_Assistant]:before,
 a.author[href$=topkekbestkek]:before,
 a.author[href$=DoomKey]:before,
 a.author[href$=DRANKLE]:before,
-a.author[href$=thisisgenny]:before
-
+a.author[href$=thisisgenny]:before,
+a.author[href$=throwawayaccount997]:before
 {
 font-size:10px!important; 
 visibility:visible!important;
@@ -1060,6 +1062,7 @@ a.author[href$=DoomKey]:before { content:"Scarfsickle" }
 a.author[href$=spearstuff]:before { content:"spearstuff" }
 a.author[href$=DRANKLE]:before { content:"T-Light aka " }
 a.author[href$=thisisgenny]:before { content:"genny" }
+a.author[href$=throwawayaccount997]:before { content:"Ta997" }
 
 /* Replacing puppy's name with a picture of derpy */
 a.author[href$=iiRockpuppy]:before 
@@ -1069,7 +1072,7 @@ background:none;
 color:#000; 
 border:0; 
 border-radius:0; 
-background-image:url(%%flairsheetf%%); 
+background-image:url(%%flairsheetg%%); 
 background-position:0 -630px; 
 background-repeat:no-repeat; 
 display:inline-block; 
@@ -1274,7 +1277,7 @@ a.author[href$=ZZW30]:after { content:"  hands killed my first mate" }
     color: black;
     border: 0;
     border-radius: 0;
-    background-image: url(%%flairsheetf%%);
+    background-image: url(%%flairsheetg%%);
     background-repeat: no-repeat;
     display: inline-block;
     width: 30px;
